Fix for under-layed scrollbar.

--- a/examples/desktop/tabs.css
+++ b/examples/desktop/tabs.css
@@ -33,6 +33,8 @@
 
 .tab-content.show {
     display: block;
-    height: 100%;
     overflow: auto;
+    position: absolute;
+    top: 35px; bottom: 0;
+    width: 100%;
 }
